--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "test": "vitest --environment jsdom --root src/"
   },
   "dependencies": {
+    "@types/jsdom": "^20.0.1",
+    "@vue/test-utils": "^2.2.7",
+    "jsdom": "^21.0.0",
+    "start-server-and-test": "^1.15.2",
+    "vitest": "^0.27.2",
     "vue": "^3.2.45"
   },
   "devDependencies": {
@@ -20,7 +24,6 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
-    "vitest": "^0.27.2",
     "vue-tsc": "^1.0.11"
   }
 }
