--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jsdom": "^20.0.1",
     "@vue/test-utils": "^2.2.7",
     "jsdom": "^21.0.0",
+    "pinia": "^2.0.29",
     "start-server-and-test": "^1.15.2",
     "vitest": "^0.27.2",
     "vue": "^3.2.45",
